[gd_scene load_steps=7 format=3 uid="uid://bfl36ykvecfd4"]

[ext_resource type="Script" path="res://Scenes & Scripts/Entities/Enemies/Enemy_base/EnemyBase.gd" id="1_mglqm"]
[ext_resource type="Script" path="res://Scenes & Scripts/Entities/Enemies/States/EnemyStateManager.gd" id="2_ofog0"]
[ext_resource type="Script" path="res://Scenes & Scripts/Entities/Enemies/Enemy_base/Stats.gd" id="3_0kcgh"]
[ext_resource type="PackedScene" uid="uid://yj1henetlw1f" path="res://Scenes & Scripts/Entities/Entity Elements/Hurtbox.tscn" id="3_bl2ki"]
[ext_resource type="Script" path="res://Scenes & Scripts/Entities/Enemies/Enemy_base/HurtHandler.gd" id="4_s31qy"]
[ext_resource type="Script" path="res://Scenes & Scripts/Entities/Enemies/Enemy_base/AnimationHandler.gd" id="5_t7vsf"]

[node name="BaseEnemy" type="CharacterBody3D"]
script = ExtResource("1_mglqm")

[node name="Scripts" type="Node" parent="."]

[node name="StateManager" type="Node" parent="Scripts"]
editor_description = "Manages Enemy states;
Stores the starting (default) State; the state that the Enemy is spawned in
Stores all the States, in case the current_state has to be changed by a Node/script that isn't the StateManager
Can change the current_state on behest of an individual State"
script = ExtResource("2_ofog0")

[node name="Stats" type="Node" parent="Scripts"]
editor_description = "Manages Enemy stats (including health);"
script = ExtResource("3_0kcgh")

[node name="HurtHandler" type="Node" parent="Scripts"]
script = ExtResource("4_s31qy")

[node name="AnimationHandler" type="Node" parent="Scripts"]
script = ExtResource("5_t7vsf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="FloorCast" type="RayCast3D" parent="."]
editor_description = "A short RayCast3D placed at the very bottom of the Collider
Activated for a single frame with check_for_floor() in the Player script"
enabled = false
target_position = Vector3(0, -0.25, 0)
collision_mask = 2
hit_from_inside = true
debug_shape_custom_color = Color(1, 1, 1, 1)
debug_shape_thickness = 5

[node name="Hurtbox" parent="." node_paths=PackedStringArray("DamageDataReceiver") instance=ExtResource("3_bl2ki")]
DamageDataReceiver = NodePath("../Scripts/HurtHandler")
